--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -1,5 +1,6 @@
-@import 'color.css'
+@import "_colors.scss"
+@import "_blur_scroll.scss"
 
-header-name
+.header-name
   font-family: Raleway
   font-weight: 200
