--- a/assets/sass/_blur_scroll.scss
+++ b/assets/sass/_blur_scroll.scss
@@ -1,19 +1,18 @@
-body {
-  font-size: 14px;
-  font-family: Sans-Serif;
+.header-background{
+  background:-webkit-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url('../images/bg.png');
+  background:-o-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url('../images/bg.png');
+  background:linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url('../images/bg.png');
 }
-* {
+*{
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
-}
-a {
-  text-decoration: none;
+  margin:0;
 }
 .blurImg {
   position: relative;
   width: 100%;
-  height: 440px;
+  height: 600px;
   z-index: -1;
   top: 0;
   left: 0;
@@ -21,7 +20,7 @@ a {
 .blurImg > div {
   position: fixed;
   width: 100%;
-  height: 440px;
+  height: 600px;
   background-repeat: no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
@@ -38,82 +37,31 @@ header {
   position: absolute;
   top: 0;
   width: 100%;
-  padding: 0px 20px;
+  padding: 0px 0px 0px 0px ;
+  font-family: Raleway;
 }
 header > div {
-  max-width: 600px;
+  max-width: 400px;
   margin: 0 auto;
   padding-top: 150px;
   height: 380px;
   text-align: center;
   color: White;
 }
-header > div a {
-  font-size: 0.8em;
-  letter-spacing: 0.08em;
-  color: rgba(255,255,255,0.85);
-  line-height: 30px;
-  padding: 7px 14px;
-  border: 1px solid rgba(255,255,255,0.3);
-  -webkit-border-radius: 2em;
-  border-radius: 2em;
-  -webkit-transition: all 0.3s ease;
-  -moz-transition: all 0.3s ease;
-  -o-transition: all 0.3s ease;
-  -ms-transition: all 0.3s ease;
-  transition: all 0.3s ease;
-}
-header > div a:hover {
-  background: #fff;
-  color: Gray;
-}
 header p {
   font-size: 1.5em;
   margin-bottom: 0.7em;
-  font-family: Times New Roman;
 }
 h1 {
-  font-weight: 800;
+  font-weight: 400;
   font-size: 3.4em;
   margin-bottom: 0.2em;
-}
-nav {
-  max-width: 600px;
-  margin: 0 auto;
-  height: 60px;
-  border-top: 1px rgba(255,255,255,0.35) solid;
-}
-nav ul li {
-  display: inline-block;
-  margin-right: 20px;
-}
-nav ul li a {
-  font-weight: 800;
-  font-size: 11px;
-  text-transform: uppercase;
-  letter-spacing: 0.2em;
-  color: rgba(255,255,255,0.5);
-  -webkit-transition: color 0.3s linear;
-  -moz-transition: color 0.3s linear;
-  -o-transition: color 0.3s linear;
-  -ms-transition: color 0.3s linear;
-  transition: color 0.3s linear;
-  line-height: 60px;
-  display: block;
-}
-nav ul li a.active {
-  -webkit-box-shadow: 0px -1px 0px #fff;
-  box-shadow: 0px -1px 0px #fff;
-}
-nav ul li a.active,
-nav ul li a:hover {
-  color: #fff;
 }
 .container {
   height: 1300px;
   background: #fff;
   z-index: 1;
-  padding: 0px 20px;
+  padding: 0px 0px;
 }
 .container div {
   max-width: 600px;
