--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -1,6 +1,8 @@
 @import "_colors.scss"
 @import "_blur_scroll.scss"
 
-.header-name
-  font-family: Raleway
+body
+  font-family:Raleway
+
+.thin
   font-weight: 200
