--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -287,16 +287,44 @@
 .stroke-black {
   stroke: #111111; }
 
-.header-background {
-  background: -webkit-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../images/bg.png");
-  background: -o-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../images/bg.png");
-  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../images/bg.png"); }
-
 * {
   -webkit-box-sizing: border-box;
   -moz-box-sizing: border-box;
   box-sizing: border-box;
   margin: 0; }
+
+.thin {
+  font-weight: 200; }
+
+h1 {
+  font-weight: 400;
+  font-size: 3.4em;
+  margin-bottom: 0.2em; }
+
+header p {
+  font-size: 1.5em;
+  margin-bottom: 0.7em; }
+
+header > div {
+  max-width: 400px;
+  margin: 0 auto;
+  padding-top: 30%;
+  height: 380px;
+  text-align: center;
+  color: White; }
+
+header {
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  padding: 0px 0px 0px 0px;
+  font-family: Raleway; }
+
+.header-background {
+  background: -webkit-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../images/bg.png");
+  background: -o-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../images/bg.png");
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../images/bg.png"); }
 
 .blurImg {
   position: relative;
@@ -314,37 +342,12 @@
   -webkit-background-size: cover;
   -moz-background-size: cover;
   background-size: cover;
-  background-position: center center; }
+  background-position: right bottom; }
 
 .blur {
   opacity: 0;
   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
   filter: alpha(opacity=0); }
-
-header {
-  z-index: 1;
-  position: absolute;
-  top: 0;
-  width: 100%;
-  padding: 0px 0px 0px 0px;
-  font-family: Raleway; }
-
-header > div {
-  max-width: 400px;
-  margin: 0 auto;
-  padding-top: 150px;
-  height: 380px;
-  text-align: center;
-  color: White; }
-
-header p {
-  font-size: 1.5em;
-  margin-bottom: 0.7em; }
-
-h1 {
-  font-weight: 400;
-  font-size: 3.4em;
-  margin-bottom: 0.2em; }
 
 .container {
   height: 1300px;
@@ -356,8 +359,5 @@ h1 {
   max-width: 600px;
   margin: 0 auto;
   padding-top: 40px; }
-
-.thin {
-  font-weight: 200; }
 
 /*# sourceMappingURL=main.css.map */
