added colors schemes

--- a/assets/sass/layout/header.sass
+++ b/assets/sass/layout/header.sass
@@ -18,10 +18,18 @@ header
   padding: 0px 0px 0px 0px
   font-family: Raleway
 
-.header-background
-  background: -webkit-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url('../images/bg.png')
-  background: -o-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url('../images/bg.png')
-  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url('../images/bg.png')
+.header-bg
+  background: -webkit-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url('../images/bg.svg')
+  background: -o-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url('../images/bg.svg')
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url('../images/bg.svg')
+
+.header-bg-blur
+  // -webkit-filter: blur(200px)
+  // -moz-filter: blur(200px)
+  // -o-filter: blur(200px)
+  // -ms-filter: blur(200px)
+  // filter: blur(200px
+  background: -webkit-linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.9))
 
 .blurImg
   position: relative
