positioning of header and nav

--- a/assets/sass/components/nav.sass
+++ b/assets/sass/components/nav.sass
@@ -1,3 +1,13 @@
-.menu
-  .text-middle
+.main-nav
+  color: white
+  margin-top: -70px
+  text-align: center
+  // position: relative
+
+  a
     vertical-align: 100%
+
+  .big-slash
+    font-size: 4em
+    font-weight: 200
+    font-family: Times New Roman
