--- a/assets/sass/layout/header.sass
+++ b/assets/sass/layout/header.sass
@@ -5,7 +5,7 @@ header p
 header > div
   max-width: 400px
   margin: 0 auto
-  padding-top: 30%
+  padding-top: 100px
   height: 380px
   text-align: center
   color: White
@@ -34,7 +34,7 @@ header
 .blurImg
   position: relative
   width: 100%
-  height: 600px
+  height: 400px
   z-index: -1
   top: 0
   left: 0
@@ -42,7 +42,7 @@ header
 .blurImg > div
   position: fixed
   width: 100%
-  height: 600px
+  height: 400px
   background-repeat: no-repeat
   -webkit-background-size: cover
   -moz-background-size: cover
