--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -4,6 +4,9 @@
   box-sizing: border-box;
   margin: 0; }
 
+body {
+  font-family: Raleway; }
+
 .thin {
   font-weight: 200; }
 
@@ -12,12 +15,16 @@ h1 {
   font-size: 3.4em;
   margin-bottom: 0.2em; }
 
-.big-slash {
-  font-size: 4em;
-  font-weight: 200; }
-
-.menu .text-middle {
-  vertical-align: 100%; }
+.main-nav {
+  color: white;
+  margin-top: -70px;
+  text-align: center; }
+  .main-nav a {
+    vertical-align: 100%; }
+  .main-nav .big-slash {
+    font-size: 4em;
+    font-weight: 200;
+    font-family: Times New Roman; }
 
 header p {
   font-size: 1.5em;
@@ -26,7 +33,7 @@ header p {
 header > div {
   max-width: 400px;
   margin: 0 auto;
-  padding-top: 30%;
+  padding-top: 100px;
   height: 380px;
   text-align: center;
   color: White; }
@@ -50,7 +57,7 @@ header {
 .blurImg {
   position: relative;
   width: 100%;
-  height: 600px;
+  height: 400px;
   z-index: -1;
   top: 0;
   left: 0; }
@@ -58,7 +65,7 @@ header {
 .blurImg > div {
   position: fixed;
   width: 100%;
-  height: 600px;
+  height: 400px;
   background-repeat: no-repeat;
   -webkit-background-size: cover;
   -moz-background-size: cover;
