--- a/assets/sass/components/nav.sass
+++ b/assets/sass/components/nav.sass
@@ -1,8 +1,12 @@
 .main-nav
+  background-color: $grey
   color: white
-  margin-top: -70px
+  // margin-top: -70px
   text-align: center
-  // position: relative
+  height: 70px
+  // box-shadow: 0 2px 3px rgba(0,0,0,.4)
+  z-index: 99999
+  position: relative
 
   a
     vertical-align: 100%
@@ -11,3 +15,8 @@
     font-size: 4em
     font-weight: 200
     font-family: Times New Roman
+
+.main-nav-scrolled
+  position: fixed
+  width: 100%
+  top: 0%
