--- a/assets/sass/layout/header.sass
+++ b/assets/sass/layout/header.sass
@@ -6,7 +6,7 @@ header > div
   max-width: 400px
   margin: 0 auto
   padding-top: 100px
-  height: 380px
+  height: 400px
   text-align: center
   color: White
 
@@ -23,13 +23,6 @@ header
   background: -o-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url('../images/bg.svg')
   background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url('../images/bg.svg')
 
-.header-bg-blur
-  // -webkit-filter: blur(200px)
-  // -moz-filter: blur(200px)
-  // -o-filter: blur(200px)
-  // -ms-filter: blur(200px)
-  // filter: blur(200px
-  background: -webkit-linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.9))
 
 .blurImg
   position: relative
@@ -39,15 +32,15 @@ header
   top: 0
   left: 0
 
-.blurImg > div
-  position: fixed
-  width: 100%
-  height: 400px
-  background-repeat: no-repeat
-  -webkit-background-size: cover
-  -moz-background-size: cover
-  background-size: cover
-  background-position: right bottom
+  div
+    position: fixed
+    width: 100%
+    height: 400px
+    background-repeat: no-repeat
+    -webkit-background-size: cover
+    -moz-background-size: cover
+    background-size: cover
+    background-position: right bottom
 
 .blur
   opacity: 0
