--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -16,15 +16,23 @@ h1 {
   margin-bottom: 0.2em; }
 
 .main-nav {
+  background-color: #AAAAAA;
   color: white;
-  margin-top: -70px;
-  text-align: center; }
+  text-align: center;
+  height: 70px;
+  z-index: 99999;
+  position: relative; }
   .main-nav a {
     vertical-align: 100%; }
   .main-nav .big-slash {
     font-size: 4em;
     font-weight: 200;
     font-family: Times New Roman; }
+
+.main-nav-scrolled {
+  position: fixed;
+  width: 100%;
+  top: 0%; }
 
 header p {
   font-size: 1.5em;
@@ -34,7 +42,7 @@ header > div {
   max-width: 400px;
   margin: 0 auto;
   padding-top: 100px;
-  height: 380px;
+  height: 400px;
   text-align: center;
   color: White; }
 
@@ -51,9 +59,6 @@ header {
   background: -o-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../images/bg.svg");
   background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../images/bg.svg"); }
 
-.header-bg-blur {
-  background: -webkit-linear-gradient(rgba(0, 0, 0, 0.8), rgba(0, 0, 0, 0.9)); }
-
 .blurImg {
   position: relative;
   width: 100%;
@@ -61,16 +66,15 @@ header {
   z-index: -1;
   top: 0;
   left: 0; }
-
-.blurImg > div {
-  position: fixed;
-  width: 100%;
-  height: 400px;
-  background-repeat: no-repeat;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  background-size: cover;
-  background-position: right bottom; }
+  .blurImg div {
+    position: fixed;
+    width: 100%;
+    height: 400px;
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    background-position: right bottom; }
 
 .blur {
   opacity: 0;
