cascading nav and parallax

--- a/assets/sass/layout/header.sass
+++ b/assets/sass/layout/header.sass
@@ -6,7 +6,7 @@ header > div
   max-width: 400px
   margin: 0 auto
   padding-top: 100px
-  height: 400px
+  height: auto
   text-align: center
   color: White
 
