--- a/assets/sass/layout/container.sass
+++ b/assets/sass/layout/container.sass
@@ -1,10 +1,10 @@
-.container
-  height: 1300px
-  background: #fff
-  z-index: 1
-  padding: 0px 0px
+// .container
+//   height: 1300px
+//   background: #fff
+//   z-index: 1
+//   padding: 0px 0px
 
-.container div
-  max-width: 600px
-  margin: 0 auto
-  padding-top: 40px
+// .container div
+//   max-width: 600px
+//   margin: 0 auto
+//   padding-top: 40px
