--- a/assets/sass/main.sass
+++ b/assets/sass/main.sass
@@ -1,21 +1,8 @@
+@import 'vendors/module'
 @import 'base/module'
 @import 'components/module'
 @import 'layout/module'
 @import 'pages/module'
 @import 'themes/module'
 @import 'utils/module'
-@import 'vendors/module'
-
-
-
-
-.container
-  height: 1300px
-  background: #fff
-  z-index: 1
-  padding: 0px 0px
-
-.container div
-  max-width: 600px
-  margin: 0 auto
-  padding-top: 40px
+@import 'nav1'
