--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -1,97 +1,3 @@
-* {
-  -webkit-box-sizing: border-box;
-  -moz-box-sizing: border-box;
-  box-sizing: border-box;
-  margin: 0; }
-
-body {
-  font-family: Raleway; }
-
-.thin {
-  font-weight: 200; }
-
-h1 {
-  font-weight: 400;
-  font-size: 3.4em;
-  margin-bottom: 0.2em; }
-
-.main-nav {
-  background-color: #AAAAAA;
-  color: white;
-  text-align: center;
-  height: 70px;
-  z-index: 99999;
-  position: relative; }
-  .main-nav a {
-    vertical-align: 100%; }
-  .main-nav .big-slash {
-    font-size: 4em;
-    font-weight: 200;
-    font-family: Times New Roman; }
-
-.main-nav-scrolled {
-  position: fixed;
-  width: 100%;
-  top: 0%; }
-
-header p {
-  font-size: 1.5em;
-  margin-bottom: 0.7em; }
-
-header > div {
-  max-width: 400px;
-  margin: 0 auto;
-  padding-top: 100px;
-  height: 400px;
-  text-align: center;
-  color: White; }
-
-header {
-  z-index: 1;
-  position: absolute;
-  top: 0;
-  width: 100%;
-  padding: 0px 0px 0px 0px;
-  font-family: Raleway; }
-
-.header-bg {
-  background: -webkit-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../images/bg.svg");
-  background: -o-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../images/bg.svg");
-  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../images/bg.svg"); }
-
-.blurImg {
-  position: relative;
-  width: 100%;
-  height: 400px;
-  z-index: -1;
-  top: 0;
-  left: 0; }
-  .blurImg div {
-    position: fixed;
-    width: 100%;
-    height: 400px;
-    background-repeat: no-repeat;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    background-position: right bottom; }
-
-.blur {
-  opacity: 0;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-  filter: alpha(opacity=0); }
-
-.container {
-  height: 1300px;
-  background: #fff;
-  z-index: 1;
-  padding: 0px 0px; }
-
-.container div {
-  max-width: 600px;
-  margin: 0 auto;
-  padding-top: 40px; }
-
 /*
 
   COLORS
@@ -384,15 +290,218 @@ header {
 .stroke-black {
   stroke: #111111; }
 
-.container {
-  height: 1300px;
-  background: #fff;
-  z-index: 1;
-  padding: 0px 0px; }
+html, body, div, span, applet, object, iframe,
+h1, h2, h3, h4, h5, h6, p, blockquote, pre,
+a, abbr, acronym, address, big, cite, code,
+del, dfn, em, img, ins, kbd, q, s, samp,
+small, strike, strong, sub, sup, tt, var,
+b, u, i, center,
+dl, dt, dd, ol, ul, li,
+fieldset, form, label, legend,
+table, caption, tbody, tfoot, thead, tr, th, td,
+article, aside, canvas, details, embed,
+figure, figcaption, footer, header, hgroup,
+menu, nav, output, ruby, section, summary,
+time, mark, audio, video {
+  margin: 0;
+  padding: 0;
+  border: 0;
+  font-size: 100%;
+  font: inherit;
+  vertical-align: baseline; }
 
-.container div {
-  max-width: 600px;
+/* HTML5 display-role reset for older browsers */
+article, aside, details, figcaption, figure,
+footer, header, hgroup, menu, nav, section {
+  display: block; }
+
+body {
+  line-height: 1; }
+
+ol, ul {
+  list-style: none; }
+
+blockquote, q {
+  quotes: none; }
+
+blockquote:before, blockquote:after,
+q:before, q:after {
+  content: "";
+  content: none; }
+
+table {
+  border-collapse: collapse;
+  border-spacing: 0; }
+
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0; }
+
+body {
+  font-family: Raleway; }
+
+.thin {
+  font-weight: 200; }
+
+h1 {
+  font-weight: 400;
+  font-size: 3.4em;
+  margin-bottom: 0.2em; }
+
+#intro {
+  background: url(../images/bg.svg) no-repeat center center fixed;
+  height: auto;
   margin: 0 auto;
-  padding-top: 40px; }
+  width: 100%;
+  position: relative;
+  box-shadow: 0 0 50px rgba(0, 0, 0, 0.8);
+  background-size: auto;
+  padding: 100px 0; }
+
+#home {
+  background: url(../images/bg.svg) 50% 0 fixed;
+  height: auto;
+  margin: 0 auto;
+  width: 100%;
+  position: relative;
+  box-shadow: 0 0 50px rgba(0, 0, 0, 0.8);
+  padding: 200px 0; }
+
+#about {
+  background: url(../images/bg.svg) 50% 0 fixed;
+  height: auto;
+  margin: 0 auto;
+  width: 100%;
+  position: relative;
+  box-shadow: 0 0 50px rgba(0, 0, 0, 0.8);
+  padding: 100px 0;
+  color: #fff; }
+
+header p {
+  font-size: 1.5em;
+  margin-bottom: 0.7em; }
+
+header > div {
+  max-width: 400px;
+  margin: 0 auto;
+  padding-top: 100px;
+  height: auto;
+  text-align: center;
+  color: White; }
+
+header {
+  z-index: 1;
+  position: absolute;
+  top: 0;
+  width: 100%;
+  padding: 0px 0px 0px 0px;
+  font-family: Raleway; }
+
+.header-bg {
+  background: -webkit-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../images/bg.svg");
+  background: -o-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../images/bg.svg");
+  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../images/bg.svg"); }
+
+.blurImg {
+  position: relative;
+  width: 100%;
+  height: 400px;
+  z-index: -1;
+  top: 0;
+  left: 0; }
+  .blurImg div {
+    position: fixed;
+    width: 100%;
+    height: 400px;
+    background-repeat: no-repeat;
+    -webkit-background-size: cover;
+    -moz-background-size: cover;
+    background-size: cover;
+    background-position: right bottom; }
+
+.blur {
+  opacity: 0;
+  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
+  filter: alpha(opacity=0); }
+
+.main-nav {
+  text-align: center; }
+  .main-nav .big-slash {
+    font-size: 4em;
+    font-weight: 200;
+    font-family: Times New Roman; }
+
+/* *********************************
+           Variables
+  ********************************** */
+/* *********************************
+   Some Style Overrides on Bootstrap
+  ********************************** */
+.navbar-inverse {
+  background: rgba(62, 195, 246, 0);
+  border-bottom: none; }
+
+.navbar-inverse .navbar-toggle {
+  border: 1px solid #333;
+  border-color: rgba(255, 255, 255, 0.7); }
+
+.navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
+  border-color: transparent; }
+  @media (max-width: 767px) {
+    .navbar-inverse .navbar-collapse, .navbar-inverse .navbar-form {
+      background: rgba(255, 255, 255, 0.75); } }
+
+.navbar-inverse .navbar-nav > li > a {
+  color: black; }
+
+.navbar-inverse .navbar-nav > li > a:hover, .navbar-inverse .navbar-nav > li > a:focus {
+  color: #22F; }
+
+/* *********************************
+           Toolbar Logo
+  ********************************** */
+.small-logo-container {
+  padding-top: 50px;
+  height: 50px;
+  overflow: hidden;
+  position: absolute; }
+
+.small-logo {
+  color: white;
+  font-size: 2.5em;
+  padding-bottom: 2px; }
+
+/* *********************************
+           Big Logo
+  ********************************** */
+.big-logo-row {
+  background: gold; }
+  .big-logo-row .big-logo-container {
+    padding-top: 50px; }
+  .big-logo-row h1 {
+    font-size: 4em;
+    margin: 0;
+    padding: 0 0 15px 0; }
+    @media (min-width: 400px) {
+      .big-logo-row h1 {
+        font-size: 4.5em; } }
+    @media (min-width: 440px) {
+      .big-logo-row h1 {
+        font-size: 5.5em; } }
+    @media (min-width: 500px) {
+      .big-logo-row h1 {
+        font-size: 6.5em; } }
+    @media (min-width: 630px) {
+      .big-logo-row h1 {
+        font-size: 7.5em; } }
+    @media (min-width: 768px) {
+      .big-logo-row h1 {
+        font-size: 9em;
+        padding-bottom: 30px; } }
+    @media (min-width: 1200px) {
+      .big-logo-row h1 {
+        font-size: 12em; } }
 
 /*# sourceMappingURL=main.css.map */
