--- a/assets/sass/components/intro.sass
+++ b/assets/sass/components/intro.sass
@@ -1,5 +1,4 @@
-#intro
-  background: url(../images/bg.svg) no-repeat center center fixed
+=section-style($bg)
   height: auto
   margin: 0 auto
   width: 100%
@@ -7,22 +6,14 @@
   box-shadow: 0 0 50px rgba(0,0,0,0.8)
   background-size: auto
   padding: 100px 0
+  background: url($bg) no-repeat center center fixed
+  -webkit-background-size: cover
+  -moz-background-size: cover
+  -o-background-size: cover
+  background-size: cover
 
-#home
-  background: url(../images/bg.svg) 50% 0 fixed
-  height: auto
-  margin: 0 auto
-  width: 100%
-  position: relative
-  box-shadow: 0 0 50px rgba(0,0,0,0.8)
+#about, #contact
+  +section-style("../images/intro.png")
+#portfolio
+  +section-style("../images/bigbg.png")
   padding: 200px 0
-
-#about
-  background: url(../images/bg.svg) 50% 0 fixed
-  height: auto
-  margin: 0 auto
-  width: 100%
-  position: relative
-  box-shadow: 0 0 50px rgba(0,0,0,0.8)
-  padding: 100px 0
-  color: #fff
