reverted to back without transnav

--- a/assets/sass/layout/header.sass
+++ b/assets/sass/layout/header.sass
@@ -1,22 +1,22 @@
-header p
-  font-size: 1.5em
-  margin-bottom: 0.7em
-
-header > div
-  max-width: 400px
-  margin: 0 auto
-  padding-top: 100px
-  height: auto
-  text-align: center
-  color: White
-
-header
-  z-index: 1
-  position: absolute
-  top: 0
-  width: 100%
-  padding: 0px 0px 0px 0px
-  font-family: Raleway
+// header p
+//   font-size: 1.5em
+//   margin-bottom: 0.7em
+//
+// header > div
+//   max-width: 400px
+//   margin: 0 auto
+//   padding-top: 100px
+//   height: auto
+//   text-align: center
+//   color: White
+//
+// header
+//   z-index: 1
+//   position: absolute
+//   top: 0
+//   width: 100%
+//   padding: 0px 0px 0px 0px
+//   font-family: Raleway
 
 .header-bg
   background: -webkit-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url('../images/bg.svg')
