--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -414,7 +414,8 @@ h1 {
     font-family: Times New Roman; }
 
 .headroom {
-  height: 70px;
+  text-align: center;
+  height: 65px;
   position: fixed;
   z-index: 10;
   right: 0;
@@ -424,6 +425,7 @@ h1 {
   padding-left: 4%;
   padding-right: 4%;
   transition: all 0.25s ease-in-out;
+  opacity: 0.8;
   backface-visibility: hidden;
   z-index: 100;
   *zoom: 1; }
@@ -432,31 +434,20 @@ h1 {
     display: table; }
   .headroom:after {
     clear: both; }
-  .headroom h1 {
-    color: #eee;
-    font-size: 26px;
-    font-family: "Open Sans", sans-serif;
-    font-weight: 700;
-    float: left;
-    display: inline-block;
-    width: auto;
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
-    margin-top: -2px; }
-  .headroom nav {
-    float: right;
-    display: inline-block;
-    width: auto;
-    font-family: "Open Sans", sans-serif;
-    font-size: 20px;
-    position: relative;
-    top: 50%;
-    transform: translateY(-50%);
-    margin-top: -2px; }
-    .headroom nav a {
-      color: #00c1bb;
-      text-decoration: none; }
+  .headroom .big-slash {
+    font-size: 4em;
+    font-weight: 200;
+    font-family: Times New Roman; }
+  .headroom .container {
+    height: 70px; }
+  .headroom span {
+    color: #748185;
+    vertical-align: middle; }
+  .headroom a {
+    font-size: 0.8em;
+    color: #FFFFFF;
+    text-decoration: none;
+    vertical-align: middle; }
   .headroom--pinned {
     transform: translateY(0%); }
   .headroom--unpinned {
