--- a/assets/sass/layout/nav.sass
+++ b/assets/sass/layout/nav.sass
@@ -30,7 +30,7 @@
   padding-left: 4%
   padding-right: 4%
   transition: all .25s ease-in-out
-  opacity: 0.8
+  // opacity: 0
   backface-visibility: hidden
   z-index: 100
   *zoom: 1
@@ -61,6 +61,8 @@
 
   &--pinned
     transform: translateY(0%)
+    opacity: 0.8
 
   &--unpinned
     transform: translateY(-100%)
+    opacity: 0.8
