--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -350,12 +350,25 @@ h1 {
   font-size: 3.4em;
   margin-bottom: 0.2em; }
 
-#about, #contact {
+#about {
   height: auto;
   margin: 0 auto;
   width: 100%;
   position: relative;
-  box-shadow: 0 0 50px rgba(0, 0, 0, 0.8);
+  background-size: auto;
+  padding: 100px 0;
+  background: url("../images/intro.png") no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  margin-top: 65px; }
+
+#contact {
+  height: auto;
+  margin: 0 auto;
+  width: 100%;
+  position: relative;
   background-size: auto;
   padding: 100px 0;
   background: url("../images/intro.png") no-repeat center center fixed;
@@ -369,7 +382,6 @@ h1 {
   margin: 0 auto;
   width: 100%;
   position: relative;
-  box-shadow: 0 0 50px rgba(0, 0, 0, 0.8);
   background-size: auto;
   padding: 100px 0;
   background: url("../images/bigbg.png") no-repeat center center fixed;
@@ -425,7 +437,6 @@ h1 {
   padding-left: 4%;
   padding-right: 4%;
   transition: all 0.25s ease-in-out;
-  opacity: 0.8;
   backface-visibility: hidden;
   z-index: 100;
   *zoom: 1; }
@@ -449,8 +460,10 @@ h1 {
     text-decoration: none;
     vertical-align: middle; }
   .headroom--pinned {
-    transform: translateY(0%); }
+    transform: translateY(0%);
+    opacity: 0.8; }
   .headroom--unpinned {
-    transform: translateY(-100%); }
+    transform: translateY(-100%);
+    opacity: 0.8; }
 
 /*# sourceMappingURL=main.css.map */
