--- a/assets/sass/layout/header.sass
+++ b/assets/sass/layout/header.sass
@@ -18,31 +18,31 @@
 //   padding: 0px 0px 0px 0px
 //   font-family: Raleway
 
-.header-bg
-  background: -webkit-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url('../images/bg.svg')
-  background: -o-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url('../images/bg.svg')
-  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url('../images/bg.svg')
-
-
-.blurImg
-  position: relative
-  width: 100%
-  height: 400px
-  z-index: -1
-  top: 0
-  left: 0
-
-  div
-    position: fixed
-    width: 100%
-    height: 400px
-    background-repeat: no-repeat
-    -webkit-background-size: cover
-    -moz-background-size: cover
-    background-size: cover
-    background-position: right bottom
-
-.blur
-  opacity: 0
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)"
-  filter: alpha(opacity=0)
+// .header-bg
+//   background: -webkit-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url('../images/bg.svg')
+//   background: -o-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url('../images/bg.svg')
+//   background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)),url('../images/bg.svg')
+//
+//
+// .blurImg
+//   position: relative
+//   width: 100%
+//   height: 400px
+//   z-index: -1
+//   top: 0
+//   left: 0
+//
+//   div
+//     position: fixed
+//     width: 100%
+//     height: 400px
+//     background-repeat: no-repeat
+//     -webkit-background-size: cover
+//     -moz-background-size: cover
+//     background-size: cover
+//     background-position: right bottom
+//
+// .blur
+//   opacity: 0
+//   -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)"
+//   filter: alpha(opacity=0)
