--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -350,73 +350,46 @@ h1 {
   font-size: 3.4em;
   margin-bottom: 0.2em; }
 
-#about {
-  height: auto;
-  margin: 0 auto;
+#intro {
+  min-height: 100vh;
   width: 100%;
   position: relative;
-  background-size: auto;
-  padding: 100px 0;
-  background: url("../images/intro.png") no-repeat center center fixed;
+  margin: 0;
+  padding: 0;
+  display: inline-block;
+  background: url("../images/bigbg.png") no-repeat center center;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
   background-size: cover;
-  margin-top: 65px; }
+  padding-top: 65px; }
+
+#about {
+  min-height: 100vh;
+  width: 100%;
+  position: relative;
+  margin: 0;
+  padding: 0;
+  display: inline-block;
+  background-color: #46AAD9; }
 
 #contact {
-  height: auto;
-  margin: 0 auto;
+  min-height: 100vh;
   width: 100%;
   position: relative;
-  background-size: auto;
-  padding: 100px 0;
-  background: url("../images/intro.png") no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover; }
+  margin: 0;
+  padding: 0;
+  display: inline-block;
+  background-color: #AAAAAA; }
 
-#portfolio {
-  height: auto;
-  margin: 0 auto;
+#work {
+  min-height: 100vh;
   width: 100%;
   position: relative;
-  background-size: auto;
-  padding: 100px 0;
-  background: url("../images/bigbg.png") no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  padding: 200px 0; }
-
-.header-bg {
-  background: -webkit-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../images/bg.svg");
-  background: -o-linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../images/bg.svg");
-  background: linear-gradient(rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.4)), url("../images/bg.svg"); }
-
-.blurImg {
-  position: relative;
-  width: 100%;
-  height: 400px;
-  z-index: -1;
-  top: 0;
-  left: 0; }
-  .blurImg div {
-    position: fixed;
-    width: 100%;
-    height: 400px;
-    background-repeat: no-repeat;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    background-size: cover;
-    background-position: right bottom; }
-
-.blur {
-  opacity: 0;
-  -ms-filter: "progid:DXImageTransform.Microsoft.Alpha(Opacity=0)";
-  filter: alpha(opacity=0); }
+  margin: 0;
+  padding: 0;
+  display: inline-block;
+  background-color: #F58255; }
 
 .main-nav {
   text-align: center; }
@@ -437,6 +410,7 @@ h1 {
   padding-left: 4%;
   padding-right: 4%;
   transition: all 0.25s ease-in-out;
+  opacity: 0.8;
   backface-visibility: hidden;
   z-index: 100;
   *zoom: 1; }
@@ -460,10 +434,8 @@ h1 {
     text-decoration: none;
     vertical-align: middle; }
   .headroom--pinned {
-    transform: translateY(0%);
-    opacity: 0.8; }
+    transform: translateY(0%); }
   .headroom--unpinned {
-    transform: translateY(-100%);
-    opacity: 0.8; }
+    transform: translateY(-100%); }
 
 /*# sourceMappingURL=main.css.map */
