--- a/assets/sass/components/intro.sass
+++ b/assets/sass/components/intro.sass
@@ -18,7 +18,7 @@
 
 #intro
   +section-style
-  +pic-bg("../images/bigbg.png")
+  +pic-bg("../images/bg.png")
   padding-top: 65px
 #about
   +section-style
