--- a/assets/sass/layout/nav.sass
+++ b/assets/sass/layout/nav.sass
@@ -3,9 +3,9 @@
   height: 65px
   position: fixed
   z-index: 9999999
-  // right: 0
-  // left: 0
-  // top: 0
+  right: 0
+  left: 0
+  top: 0
   background-color: #40474d
   padding-left: 4%
   padding-right: 4%
