--- a/assets/sass/base/general.sass
+++ b/assets/sass/base/general.sass
@@ -7,10 +7,13 @@
 body
   font-family: Raleway
 
-.thin
-  font-weight: 200
-
 h1
   font-weight: 400
   font-size: 3.4em
   margin-bottom: 0.2em
+
+.container
+  min-height: 100vh
+  width: 100%
+  position: relative
+  display: inline-block
