--- a/assets/sass/base/general.sass
+++ b/assets/sass/base/general.sass
@@ -10,10 +10,10 @@ body
 h1
   font-weight: 400
   font-size: 3.4em
-  margin-bottom: 0.2em
 
-.container
+.section-wrapper
   min-height: 100vh
   width: 100%
   position: relative
   display: inline-block
+  margin: 0 0 0 0 
