--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -344,14 +344,14 @@ body {
 
 h1 {
   font-weight: 400;
-  font-size: 3.4em;
-  margin-bottom: 0.2em; }
+  font-size: 3.4em; }
 
-.container {
+.section-wrapper {
   min-height: 100vh;
   width: 100%;
   position: relative;
-  display: inline-block; }
+  display: inline-block;
+  margin: 0 0 0 0; }
 
 #intro {
   background: url("../images/bg.png") no-repeat center center;
@@ -363,11 +363,20 @@ h1 {
 #about {
   background-color: #46AAD9; }
 
+#work {
+  background-color: #F58255; }
+
 #contact {
   background-color: #AAAAAA; }
 
-#work {
-  background-color: #F58255; }
+.about-title, .about-content {
+  height: 100vp;
+  width: 50%; }
+.about-title {
+  float: left; }
+.about-content {
+  float: right;
+  background-color: white; }
 
 .headroom {
   text-align: center;
