nav links and cleardiv

--- a/assets/sass/components/intro.sass
+++ b/assets/sass/components/intro.sass
@@ -17,10 +17,11 @@
 #contact
   background-color: $grey
 
-.about
+.about, .work, .contact
   &-title, &-content
-    height: 100vp
-    width: 50%
+    // height: 100vp
+    width: 49vp
+    margin: 0 0 0 0
   &-title
     float: left
   &-content
