--- a/assets/sass/base/general.sass
+++ b/assets/sass/base/general.sass
@@ -1,8 +1,8 @@
-*
-  -webkit-box-sizing: border-box
-  -moz-box-sizing: border-box
-  box-sizing: border-box
-  margin: 0
+// *
+//   -webkit-box-sizing: border-box
+//   -moz-box-sizing: border-box
+//   box-sizing: border-box
+//   margin: 0
 
 body
   font-family: Raleway
@@ -16,4 +16,11 @@ h1
   width: 100%
   position: relative
   display: inline-block
-  margin: 0 0 0 0 
+  margin: 0 0 0 0
+
+.clear
+  clear: both
+  height: 1px
+  overflow: hidden
+  font-size: 0
+  margin-top: -1px
