--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -370,14 +370,29 @@ h1 {
 #contact {
   background-color: #AAAAAA; }
 
-.about-title, .about-content, .work-title, .work-content, .contact-title, .contact-content {
-  width: 49vp;
-  margin: 0 0 0 0; }
-.about-title, .work-title, .contact-title {
+.about-title, .about-content, .contact-title, .contact-content {
+  width: 50%; }
+.about-title, .contact-title {
   float: left; }
-.about-content, .work-content, .contact-content {
+.about-content, .contact-content {
+  background-color: white;
+  top: 0;
+  bottom: 0;
+  position: absolute;
   float: right;
-  background-color: white; }
+  right: 0; }
+
+.work-title, .work-content {
+  width: 50%; }
+.work-title {
+  background-color: white;
+  top: 0;
+  bottom: 0;
+  position: absolute;
+  float: left;
+  left: 0; }
+.work-content {
+  float: right; }
 
 .headroom {
   text-align: center;
