--- a/assets/sass/base/general.sass
+++ b/assets/sass/base/general.sass
@@ -15,12 +15,12 @@ h1
   min-height: 100vh
   width: 100%
   position: relative
-  display: inline-block
+  display: block
   margin: 0 0 0 0
 
 .clear
   clear: both
-  height: 1px
-  overflow: hidden
-  font-size: 0
-  margin-top: -1px
+  // height: 1px
+  // overflow: hidden
+  // font-size: 0
+  // margin-top: 2
