--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -344,15 +344,11 @@ h1 {
   min-height: 100vh;
   width: 100%;
   position: relative;
-  display: inline-block;
+  display: block;
   margin: 0 0 0 0; }
 
 .clear {
-  clear: both;
-  height: 1px;
-  overflow: hidden;
-  font-size: 0;
-  margin-top: -1px; }
+  clear: both; }
 
 #intro {
   background: url("../images/bg.png") no-repeat center center;
@@ -371,24 +367,30 @@ h1 {
   background-color: #AAAAAA; }
 
 .about-title, .about-content, .contact-title, .contact-content {
+  top: 0;
+  bottom: 0;
+  position: absolute;
   width: 50%; }
 .about-title, .contact-title {
   float: left; }
 .about-content, .contact-content {
-  background-color: white;
   top: 0;
   bottom: 0;
   position: absolute;
+  background-color: white;
   float: right;
   right: 0; }
 
 .work-title, .work-content {
-  width: 50%; }
+  width: 50%;
+  top: 0;
+  bottom: 0;
+  position: absolute; }
 .work-title {
-  background-color: white;
   top: 0;
   bottom: 0;
   position: absolute;
+  background-color: white;
   float: left;
   left: 0; }
 .work-content {
