smooth scroll nav

--- a/assets/sass/components/intro.sass
+++ b/assets/sass/components/intro.sass
@@ -60,6 +60,14 @@
   &-white
     @extend .subsection
     background-color: white
+
+.about
+  flex: 1
+  > .title
+    vertical-align: middle
+
+
+
 .intro
   // top: 50%
   // left: 50%
