--- a/assets/sass/base/colors.sass
+++ b/assets/sass/base/colors.sass
@@ -3,4 +3,5 @@ $accent-purple: #9A74CE
 $accent-green: #1CB890
 $accent-red:#F84356
 $accent-orange:#F58255
-$grey:#AAAAAA
+$grey: #AAAAAA
+$black: #01010f
