contact msg and social media icons

--- a/assets/sass/base/colors.sass
+++ b/assets/sass/base/colors.sass
@@ -4,4 +4,5 @@ $accent-green: #1CB890
 $accent-red:#F84356
 $accent-orange:#F58255
 $grey: #AAAAAA
-$black: #01010f
+$black: #444444
+$white: #ffffff
