--- a/assets/sass/components/contact.sass
+++ b/assets/sass/components/contact.sass
@@ -1,8 +1,84 @@
-.contact
-  font-size: 40px
-  padding-left: 20px
+$icon-color: $black
+$icon-color-hover: $white
+$icon-dimension: 40px
 
-  >div
-    >a:-webkit-any-link
-      color: black
-      text-decoration: none
+// social colors from http://designpieces.com/2012/12/social-media-colours-hex-and-rgb/
+
+$github: $black
+$facebook: #3b5998
+$twitter: #55acee
+$instagram: #125688
+$linkedin: #007bb5
+
+$transition: all .2s ease-in-out
+
+$list: (facebook, $facebook)(github, $github)(instagram, $instagram)(linkedin, $linkedin)
+
+=social-background
+  @each $item, $color in $list
+    .#{$item} .fa:after
+      background: #{$color}
+
+.contact
+  padding-left: 20px
+  padding-right: 20px
+
+  .text
+    color: $black
+    font-size: 1.2em
+    margin-bottom: 25px
+    font-weight: 200
+
+  .social
+    width: 210px
+    height: $icon-dimension
+    text-align: center
+    position: relative
+    left: 50%
+    top: 50%
+    margin: (-$icon-dimension * 0.5) 0 0 -105px
+    padding: 0
+    li
+      list-style-type: none
+      display: inline-block
+      margin: 0 0 0 -10px
+      pading: 0
+      a
+        text-align: center
+        color: $icon-color
+        i
+          display: inline-block
+          font-size: 0
+          line-height: 1
+          cursor: pointer
+          padding: 10px
+          width: $icon-dimension
+          height: $icon-dimension
+          border-radius: 50%
+          text-align: center
+          position: relative
+          color: $icon-color
+          z-index: 1
+          transition: $transition
+          &:before
+            font-size: 20px
+            z-index: 2
+            position: relative
+          &:after
+            opacity: 0
+            pointer-events: none
+            position: absolute
+            left: 0
+            top: 0
+            width: 100%
+            height: 100%
+            border-radius: 100%
+            content: ''
+            transform: scale(0.2)
+            transition: $transition
+          &:hover
+            color: $icon-color-hover
+            &:after
+              transform: scale(1)
+              opacity: 1
+    +social-background
