--- a/assets/sass/base/colors.sass
+++ b/assets/sass/base/colors.sass
@@ -6,3 +6,10 @@ $accent-orange:#F58255
 $grey: #AAAAAA
 $black: #444444
 $white: #ffffff
+
+.orange
+  color: $accent-orange
+.blue
+  color: $primary-color
+.grey
+  color: $grey
