--- a/assets/sass/base/general.sass
+++ b/assets/sass/base/general.sass
@@ -1,8 +1,11 @@
-// *
-//   -webkit-box-sizing: border-box
-//   -moz-box-sizing: border-box
-//   box-sizing: border-box
-//   margin: 0
+@import url(http://fonts.googleapis.com/css?family=Lato:900)
+
+*
+  -webkit-box-sizing: border-box
+  -moz-box-sizing: border-box
+  box-sizing: border-box
+  margin: 0
+
 $font: Lato
 
 body
@@ -16,7 +19,3 @@ h1
 
 .clear
   clear: both
-  // height: 1px
-  // overflow: hidden
-  // font-size: 0
-  // margin-top: 2
