--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -42,6 +42,12 @@ table {
   border-collapse: collapse;
   border-spacing: 0; }
 
+* {
+  -webkit-box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  box-sizing: border-box;
+  margin: 0; }
+
 body {
   font-family: Lato; }
 
@@ -52,22 +58,6 @@ h1 {
 .clear {
   clear: both; }
 
-*, *:before, *:after {
-  box-sizing: border-box; }
-
-body {
-  font-family: 'Lato', sans-serif; }
-
-.letter, .letter--black {
-  display: inline-block;
-  font-weight: 900;
-  font-size: 5em;
-  margin: 0.07em;
-  position: relative;
-  transform-style: preserve-3d;
-  perspective: 400;
-  z-index: 1; }
-
 .orange {
   color: #F58255; }
 
@@ -76,44 +66,6 @@ body {
 
 .grey {
   color: #AAAAAA; }
-
-.letter:before, .letter:after, .letter--black:before, .letter--black:after {
-  position: absolute;
-  content: attr(data-letter);
-  transform-origin: top left;
-  top: 0;
-  left: 0; }
-
-.letter, .letter:before, .letter:after, .letter--black, .letter--black:before, .letter--black:after {
-  transition: all 0.3s ease-in-out; }
-
-.letter-before, .letter:before, .letter--black:before {
-  text-shadow: -1px 0px 1px rgba(255, 255, 255, 0.8), 1px 0px 1px rgba(0, 0, 0, 0.8);
-  z-index: 3;
-  transform: rotateX(0deg) rotateY(-18deg) rotateZ(0deg); }
-
-.letter:before {
-  color: #FFF; }
-
-.letter--black:before {
-  color: #444444; }
-
-.letter:after, .letter--black:after {
-  color: rgba(0, 0, 0, 0.11);
-  z-index: 2;
-  transform: scale(1.08, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 1deg); }
-
-.letter-hover-before, .letter:hover:before, .letter--black:hover:before {
-  transform: rotateX(0deg) rotateY(-30deg) rotateZ(0deg); }
-
-.letter:hover:before {
-  color: #fafafa; }
-
-.letter--black:hover:before {
-  color: #12121c; }
-
-.letter:hover:after, .letter--black:hover:after {
-  transform: scale(1.08, 1) rotateX(0deg) rotateY(30deg) rotateZ(0deg) skew(0deg, 15deg); }
 
 #intro {
   background: url("../images/bg.png") no-repeat center center;
@@ -248,6 +200,50 @@ body {
       background: #125688; }
     .contact .social .linkedin .fa:after {
       background: #007bb5; }
+
+.letter, .letter--black {
+  display: inline-block;
+  font-weight: 900;
+  font-size: 5em;
+  margin: 0.07em;
+  position: relative;
+  transform-style: preserve-3d;
+  perspective: 400;
+  z-index: 1;
+  transition: all 0.3s ease-in-out; }
+  .letter:before, .letter:after, .letter--black:before, .letter--black:after {
+    position: absolute;
+    content: attr(data-letter);
+    transform-origin: top left;
+    top: 0;
+    left: 0;
+    transition: all 0.3s ease-in-out; }
+  .letter:after, .letter--black:after {
+    color: rgba(0, 0, 0, 0.11);
+    z-index: 2;
+    transform: scale(1.08, 1) rotateX(0deg) rotateY(0deg) rotateZ(0deg) skew(0deg, 1deg); }
+  .letter:hover:after, .letter--black:hover:after {
+    transform: scale(1.08, 1) rotateX(0deg) rotateY(30deg) rotateZ(0deg) skew(0deg, 15deg); }
+
+.letter-before, .letter:before, .letter--black:before {
+  text-shadow: -1px 0px 1px rgba(255, 255, 255, 0.8), 1px 0px 1px rgba(0, 0, 0, 0.8);
+  z-index: 3;
+  transform: rotateX(0deg) rotateY(-18deg) rotateZ(0deg); }
+
+.letter:before {
+  color: #FFF; }
+
+.letter--black:before {
+  color: #444444; }
+
+.letter-hover-before, .letter:hover:before, .letter--black:hover:before {
+  transform: rotateX(0deg) rotateY(-30deg) rotateZ(0deg); }
+
+.letter:hover:before {
+  color: #fafafa; }
+
+.letter--black:hover:before {
+  color: #12121c; }
 
 .headroom {
   text-align: center;
