--- a/assets/sass/components/about.sass
+++ b/assets/sass/components/about.sass
@@ -1,2 +1,8 @@
 .about
-  font-family: Merriweather
+  // font-family: montserrat-light
+  padding: 50px 40px
+
+  .text
+    line-height: 1.4
+    text-align: left
+    font-weight: 400
