--- a/assets/sass/base/general.sass
+++ b/assets/sass/base/general.sass
@@ -1,5 +1,7 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:900)
+@import url(http://fonts.googleapis.com/css?family=Lato:900,400)
 @import url(https://fonts.googleapis.com/css?family=Merriweather)
+@import url(https://fonts.googleapis.com/css?family=Oswald:700)
+// @import url(http://allfont.net/allfont.css?fonts=montserrat-light)
 
 *
   -webkit-box-sizing: border-box
@@ -11,6 +13,7 @@ $font: Lato
 
 body
   font-family: $font
+  font-size: 1.2em
 
 h1
   font-weight: 400
