--- a/assets/sass/components/contact.sass
+++ b/assets/sass/components/contact.sass
@@ -16,14 +16,14 @@ $list: (facebook, $facebook)(github, $github)(instagram, $instagram)(linkedin, $
       background: #{$color}
 
 .contact
-  padding-left: 20px
-  padding-right: 20px
+  padding: 50px 40px
 
   .text
     color: $black
-    font-size: 1.2em
+    line-height: 1.4
+    text-align: left
+    font-weight: 400
     margin-bottom: 25px
-    font-weight: 200
 
   .social
     width: 210px
