font sizes and margins

--- a/assets/sass/components/about.sass
+++ b/assets/sass/components/about.sass
@@ -1,8 +1,10 @@
 .about
   // font-family: montserrat-light
-  padding: 50px 40px
+  padding: 50px 70px
+  flex: 1 1 auto
+  overflow-y: auto
+  min-height: 0px
 
   .text
     line-height: 1.4
     text-align: left
-    font-weight: 400
