--- a/assets/sass/components/contact.sass
+++ b/assets/sass/components/contact.sass
@@ -16,23 +16,23 @@ $list: (facebook, $facebook)(github, $github)(instagram, $instagram)(linkedin, $
       background: #{$color}
 
 .contact
-  padding: 50px 40px
+  padding: 50px 60px
 
   .text
     color: $black
     line-height: 1.4
     text-align: left
     font-weight: 400
-    margin-bottom: 25px
+    margin-bottom: 10px
 
   .social
     width: 210px
     height: $icon-dimension
-    text-align: center
+    text-align: left
     position: relative
-    left: 50%
-    top: 50%
-    margin: (-$icon-dimension * 0.5) 0 0 -105px
+    left: 0%
+    top: 0%
+    // margin: (-$icon-dimension * 0.5) 0 0 -105px
     padding: 0
     li
       list-style-type: none
@@ -40,7 +40,7 @@ $list: (facebook, $facebook)(github, $github)(instagram, $instagram)(linkedin, $
       margin: 0 0 0 -10px
       pading: 0
       a
-        text-align: center
+        text-align: left
         color: $icon-color
         i
           display: inline-block
