--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -1,4 +1,4 @@
-@import url(http://fonts.googleapis.com/css?family=Lato:900,400,600,300);
+@import url(http://fonts.googleapis.com/css?family=Lato:900,400,700,300);
 html, body, div, span, applet, object, iframe,
 h1, h2, h3, h4, h5, h6, p, blockquote, pre,
 a, abbr, acronym, address, big, cite, code,
@@ -50,7 +50,8 @@ table {
 
 body {
   font-family: Lato;
-  font-size: 1.2em; }
+  font-size: 1em;
+  font-weight: 400; }
 
 h1 {
   font-weight: 400;
@@ -60,7 +61,7 @@ h1 {
   clear: both; }
 
 strong {
-  font-weight: 600; }
+  font-weight: 700; }
 
 .orange {
   color: #F58255; }
@@ -72,21 +73,20 @@ strong {
   color: #AAAAAA; }
 
 .contact {
-  padding: 50px 40px; }
+  padding: 50px 60px; }
   .contact .text {
     color: #444444;
     line-height: 1.4;
     text-align: left;
     font-weight: 400;
-    margin-bottom: 25px; }
+    margin-bottom: 10px; }
   .contact .social {
     width: 210px;
     height: 40px;
-    text-align: center;
+    text-align: left;
     position: relative;
-    left: 50%;
-    top: 50%;
-    margin: -20px 0 0 -105px;
+    left: 0%;
+    top: 0%;
     padding: 0; }
     .contact .social li {
       list-style-type: none;
@@ -94,7 +94,7 @@ strong {
       margin: 0 0 0 -10px;
       pading: 0; }
       .contact .social li a {
-        text-align: center;
+        text-align: left;
         color: #444444; }
         .contact .social li a i {
           display: inline-block;
@@ -141,7 +141,10 @@ strong {
       background: #007bb5; }
 
 .subtitle {
-  margin-bottom: 8px; }
+  margin-bottom: 18px;
+  font-weight: 700;
+  text-align: left;
+  font-size: 1.2em; }
 
 .letter, .letter--black {
   display: inline-block;
@@ -188,13 +191,16 @@ strong {
   color: #373535; }
 
 .about {
-  padding: 50px 40px; }
+  padding: 50px 70px;
+  flex: 1 1 auto;
+  overflow-y: auto;
+  min-height: 0px; }
   .about .text {
     line-height: 1.4;
-    text-align: left;
-    font-weight: 400; }
+    text-align: left; }
 
 .headroom {
+  font-size: 1.2em;
   text-align: center;
   height: 65px;
   position: fixed;
