--- a/assets/sass/components/about.sass
+++ b/assets/sass/components/about.sass
@@ -1,10 +1,11 @@
 .about
   // font-family: montserrat-light
   padding: 50px 70px
-  flex: 1 1 auto
-  overflow-y: auto
+  flex: 1
+  overflow-y: scroll
   min-height: 0px
 
   .text
+    flex: 1
     line-height: 1.4
     text-align: left
