--- a/assets/stylesheets/main.css
+++ b/assets/stylesheets/main.css
@@ -192,10 +192,11 @@ strong {
 
 .about {
   padding: 50px 70px;
-  flex: 1 1 auto;
-  overflow-y: auto;
+  flex: 1;
+  overflow-y: scroll;
   min-height: 0px; }
   .about .text {
+    flex: 1;
     line-height: 1.4;
     text-align: left; }
 
