Update color and letter size

--- a/assets/sass/base/colors.sass
+++ b/assets/sass/base/colors.sass
@@ -1,15 +1,18 @@
-$primary-color: #46AAD9
-$accent-purple: #9A74CE
+$primary-color: #0085CA
+$accent-purple: #9068be
 $accent-green: #1CB890
-$accent-red:#F84356
-$accent-orange:#F58255
-$grey: #AAAAAA
+$accent-red:#e62739
+$accent-orange:#FFBA00
+$grey: #e1e8f0
+$dark-grey: #636363
 $black: #444444
 $white: #ffffff
 
 .orange
-  color: $accent-orange
+  color: $accent-purple
 .blue
   color: $primary-color
 .grey
   color: $grey
+.white
+  color: $white
