Modify hyperlink color (hover/visited etc..)

--- a/assets/sass/components/about.sass
+++ b/assets/sass/components/about.sass
@@ -9,3 +9,14 @@
     flex: 1
     line-height: 1.4
     text-align: left
+
+  a:link
+    color: $black
+  a:visited
+    color: $black
+    text-decoration: none
+  a:hover
+    color: $dark-grey
+    text-decoration: none
+  a:active
+    color: $black
